--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Awesome한 계산기</h1>
-    <form th:action="@{/caculate}" method="post">
+    <form th:action="@{/calculate}" method="post">
       <label for="num1">Number 1:</label>
       <input type="number" step="any" id="num1" name="id1" />
 
