--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -14,12 +14,12 @@
         <label for="num1">Number 2:</label>
         <input type="number" step="any" id="num2" name="num2" required />
 
-        <label for = "operation"> Operation: </label>
-        <select id = "operation" name="operation">
-            <option>Add (+)</option>
-            <option>Subtract (-)</option>
-            <option>Multiply (x)</option>
-            <option>Divide <+></option>
+        <label for="operation">Operation: </label>
+        <select id="operation" name="operation">
+            <option value="add">Add (+)</option>
+            <option value="subtract">Subtract (-)</option>
+            <option value="multiply">Multiply (×)</option>
+            <option value="divide">Divide (+)</option>
         </select>
       <button type="submit">Calculate</button>
     </form>
