--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -3,6 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome한 계산기</title>
+    <style>
+        @font-face {
+        font-family: 'Ownglyph_ParkDaHyun';
+        src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2411-3@1.0/Ownglyph_ParkDaHyun.woff2') format('woff2');
+        font-weight: normal;
+        font-style: normal;
+    }
+
+    body {
+        font-family: Ownglyph_ParkDaHyun;
+        background-color: #C4E0E5;
+        margin: 0;
+        padding: 20px;
+    }
+
+    h1 {
+        color: #243B55;
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
+    form {
+        background: #243B55;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0,0,.5);
+        max-width: 400px;
+        margin: 0 auto;
+
+    }
+
+    label {
+        display: block;
+        margin-bottom : 10px;
+
+    }
+
+        input, select {
+            width: 100%;
+            background-color: #f7ff00;
+            color: #db36a4;
+            margin-top: 5px;
+            margin-bottom: 15px;
+            border: 1px solid #0c0c0c;
+            font-size: 24px;
+        }
+
+        button {
+            background-color: #f7ff00;
+            color: #a94442;
+            border: none;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .result, .error {
+            max-width: 400px;
+            margin: 20px auto;
+            padding: 15px;
+            border-radius: 5px;
+            text-align: center;
+        }
+
+        .result {
+            background-color: #e7f3fe;
+            color: #31708f;
+        }
+
+        .error {
+            background-color: #f2dede;
+            color: #a94442;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Awesome한 계산기</h1>
@@ -23,5 +102,12 @@
         </select>
       <button type="submit">Calculate</button>
     </form>
+
+    <div th:if="${errorMessage}" class="error">
+        <p th:text="${errorMessage}"></p>
+    </div>
+<div th:if ="${result}" class="result">
+    <h2>Result: <span th:text="${result}"></span></h2>
+</div>
 </body>
 </html>
